update fruit <script> import in solution folder closes #17

--- a/solution/src/views/layouts/main.hbs
+++ b/solution/src/views/layouts/main.hbs
@@ -12,6 +12,6 @@
   {{> footer}}
 
   <script src="/js/main.js"></script>
-
+  {{#if activePage.fruits}}<script src="/js/fruit-fav.js"></script>{{/if}}
 </body>
 </html>
